# plutip-example

./: CHANGELOG.md  README.md  flake.nix  plutus-testing.cabal  run-env.sh
app/: Main.hs
test/: Tasty.hs
