cabal-version:      2.4
name:               plutus-testing
version:            0.0.0.1

-- A short (one-line) description of the package.
-- synopsis: a testing suite for ppbl

-- A longer description of the package.
-- description: Run a unit test on a smart contract.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             alexeusgr
maintainer:         alexeusgr@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable plutus-testing
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
--              , data-default
--              , mtl
--              , optparse-applicative
--              , plutip
--              , positive
    hs-source-dirs:   app
    default-language: Haskell2010
