cabal-version:      2.4
name:               plutus-testing
version:            0.0.0.2

-- A short (one-line) description of the package.
-- synopsis: a testing suite for ppbl

-- A longer description of the package.
-- description: How do we do tests? How do we do tests on smart contracts?

-- A URL where users can report bugs.
-- bug-reports: https://github.com/aleeusgr/plutus-testing/issues

-- The license under which the package is released.
-- license:

author:             alexeusgr
maintainer:         alexeusgr@gmail.com

-- A copyright notice.
-- copyright:
-- category:

extra-source-files: CHANGELOG.md

executable plutus-testing
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      , base ^>=4.14.3.0
      , containers
      , lens
      , plutip
      , plutus-contract
      , plutus-ledger
      , plutus-ledger-constraints
      , plutus-pab
      , tasty
      , text
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:   -Wall -threaded -rtsopts
