cabal-version:      2.4
name:               plutus-testing
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: a unit test for tasty

-- A longer description of the package.
-- description: https://devtut.github.io/haskell/testing-with-tasty.html

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             alexeusgr
maintainer:         alexeusgr@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

test-suite tests
   ghc-options: -Wall
   default-extensions:  OverloadedStrings
   type: exitcode-stdio-1.0
   main-is: Tasty.hs
   Hs-source-dirs:   test
   build-depends:    base ^>=4.15.1.0
                   , tasty
                   , tasty-smallcheck
                   , tasty-quickcheck
                   , tasty-hunit
   default-language:    Haskell2010

executable plutus-testing
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
